--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@radix-ui/react-slider": "^1.2.2",
         "@radix-ui/react-switch": "^1.1.2",
         "@radix-ui/react-tabs": "^1.1.2",
+        "@radix-ui/react-toast": "^1.2.5",
         "@tailwindcss/vite": "^4.0.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
